moved membicdiv left to avoid tab bar wrap

--- a/klsgae/docroot/css/site.css
+++ b/klsgae/docroot/css/site.css
@@ -110,3 +110,5 @@ h2 { font-size:large; font-weight:bold; }
 
 .sitelist { list-style:none; margin:0px; padding:0px; }
 .sitelist li { padding:10px; }
+
+#membicdiv { margin-left:-10px; }
